@@ -1,4 +1,4 @@
-.\" $NetBSD: intro.4,v 1.4 2005/06/20 13:25:24 peter Exp $
+.\" $NetBSD: intro.4,v 1.5 2005/09/05 18:54:10 kiyohara Exp $
 .\"
 .\" Copyright (c) 2004 Valeriy E. Ushakov
 .\" Copyright (c) 1994 Christopher G. Demetriou
@@ -33,7 +33,7 @@
 .\"
 .\" <<Id: LICENSE,v 1.2 2000/06/14 15:57:33 cgd Exp>>
 .\"
-.Dd May 14, 2005
+.Dd Sep 6, 2005
 .Dt INTRO 4 hpcsh
 .Os
 .Sh NAME
@@ -181,6 +181,8 @@ Pointer devices:
 LCD screen of HP Jornada 680 series machines
 .It j6x0tp
 touch screen of HP Jornada 680 series machines
+.It psh3lcd
+LCD screen of HITACHI PERSONA SH3 series machines
 .It psh3tp
 touch screen of HITACHI PERSONA SH3 series machines
 .El
@@ -190,6 +192,7 @@ touch screen of HITACHI PERSONA SH3 series machines
 .Xr adc 4 ,
 .Xr j6x0lcd 4 ,
 .Xr j6x0tp 4 ,
+.Xr psh3lcd 4 ,
 .Xr psh3tp 4 ,
 .Xr shb 4
 .\"
